--- a/templates/content/node--newsletter--email-html.html.twig
+++ b/templates/content/node--newsletter--email-html.html.twig
@@ -140,11 +140,6 @@
             </style>
             <style>
 
-                img{
-        max-width:100%;
-        height:auto
-    }
-
 a, a:visited, a:hover, a:active {
     text-decoration: none;
     color: #0277bd;
@@ -436,7 +431,18 @@ h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6 {
                                   <td align="center">
                                 <!-- Intro Img -->
                                     {% if content.field_newsletter_intro_image|render %}
-                                    <img id="newsletter-email-intro-img" src="{{base_domain}}{{file_url(node.field_newsletter_intro_image.entity.field_media_image.entity.fileuri)}}" style="{{classicImgOffset}}">
+                                    <table role="presentation" border="0" cellspacing="0" cellpadding="0" style="border-collapse: collapse; width: 600px;">
+                                      <tr>
+                                        <td style="padding: 0; text-align: center; width: 600px;">
+                                          <img
+                                            id="newsletter-email-intro-img"
+                                            src="{{base_domain}}{{file_url(node.field_newsletter_intro_image.entity.field_media_image.entity.fileuri)}}"
+                                            width="600"
+                                            style="display: block; width: 100%; max-width: 600px; height: auto; border: 0; outline: none;"
+                                            alt="{{ node.field_newsletter_intro_image.entity.field_media_image.alt|render }}" />
+                                        </td>
+                                      </tr>
+                                    </table>
                                     {% endif %}
                                     </td>
                                 </tr>
@@ -475,7 +481,12 @@ h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6 {
                                         <tr>
                                             <td align="center" style="text-align: left; padding-right:10px; padding-left:10px;padding-bottom:20px">
                                                 <a href="{{ final_url_one}}">
-                                                    <img width="600" src="{{base_domain}}{{file_url(node.field_newsletter_promo_image_one.entity.field_media_image.entity.fileuri|image_style('focal_image_square'))}}"/>
+                                                  <img
+                                                  src="{{base_domain}}{{file_url(node.field_newsletter_promo_image_one.entity.field_media_image.entity.fileuri|image_style('focal_image_square'))}}"
+                                                  width="600"
+                                                  height="600"
+                                                  style="display: block; width: 600px; height: 600px; object-fit: cover; border: 0; outline: none;"
+                                                  alt="{{ node.field_newsletter_promo_image_one.entity.field_media_image.alt|render }}" />
                                                 </a>
                                             </td>
                                         </tr>
@@ -486,7 +497,12 @@ h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6 {
                                     <tbody>
                                         <tr>
                                             <td align="center"style="text-align: left; padding-right:10px; padding-left:10px; padding-bottom:20px">
-                                                <img width="600"src="{{base_domain}}{{file_url(node.field_newsletter_promo_image_one.entity.field_media_image.entity.fileuri|image_style('focal_image_square'))}}"/>
+                                              <img
+                                              src="{{base_domain}}{{file_url(node.field_newsletter_promo_image_one.entity.field_media_image.entity.fileuri|image_style('focal_image_square'))}}"
+                                              width="600"
+                                              height="600"
+                                              style="display: block; width: 600px; height: 600px; object-fit: cover; border: 0; outline: none;"
+                                              alt="{{ node.field_newsletter_promo_image_one.entity.field_media_image.alt|render }}" />
                                             </td>
                                         </tr>
                                     </tbody>
