Newsletter: ensure centering in footer, fix rogue link styles

--- a/templates/content/node--newsletter--email-html.html.twig
+++ b/templates/content/node--newsletter--email-html.html.twig
@@ -139,11 +139,6 @@
               }
             </style>
             <style>
-            a, a:visited, a:hover, a:active {
-                text-decoration: none;
-                color: #0277bd;
-            }
-
             .ucb-email-header-classic a,
             .ucb-email-footer-classic a,
             .ucb-email-header-simple a,
@@ -708,8 +703,8 @@
                 <tbody style="{{boxBackground}}">
          <!--Site Link-->
                   <tr style="{{boxBackground}}">
-                    <td>
-                      <a style="font-family: Helvetica, Arial, sans-serif;line-height: 19px; margin: 0; font-size: 18px; font-weight:bold;" href="{{base_domain}}">{{ site_name }}
+                    <td style="text-align: center">
+                      <a style="font-family: Helvetica, Arial, sans-serif;line-height: 19px; margin: 0; font-size: 18px; font-weight:bold;text-align: center;" href="{{base_domain}}">{{ site_name }}
                       </a>
                     </td>
                   </tr>
