--- a/css/menu-styles/highlight-styles.css
+++ b/css/menu-styles/highlight-styles.css
@@ -1,5 +1,6 @@
 @media only screen and (min-width: 576px) {
-  .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region .ucb-menu {
+  .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region .ucb-menu,
+  .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region.ucb-secondary-menu-button-display .ucb-secondary-menu-region-container .ucb-menu {
     gap: 0rem;
   }
 
