--- a/templates/block/block--article-list-block.html.twig
+++ b/templates/block/block--article-list-block.html.twig
@@ -15,6 +15,9 @@
 {# Base Url #}
 {% set baseurlJSON = url('<front>')|render|trim('/') %}
 
+{# Show/Hide Date #}
+{% set global_date_format = drupal_config('ucb_site_configuration.settings', 'article_date_format') %}
+
 {# This block mirrors the Article List Node - constructs a JSON endpoint in TWIG using include filters #}
 {# JSON API Endpoint information #}
 {% set articlesJSON = (url('<front>')|render|trim('/'))
@@ -179,7 +182,9 @@
     exCats="{{ excludeCategories }}"
     exTags="{{ excludeTags }}"
     display="{{ content.field_art_list_block_display|render|striptags|trim }}"
-    count="{{ content.field_art_list_block_item_count|render|striptags|trim }}">
+    count="{{ content.field_art_list_block_item_count|render|striptags|trim }}"
+    global-date-format="{{global_date_format}}"
+    >
     <div id="ucb-al-loading" class="ucb-list-msg ucb-loading-data">
       <i class="fa-solid fa-spinner fa-3x fa-spin-pulse"></i>
     </div>
