Article Feature: Fixes aspect ratio for Wide images

--- a/css/block/ucb-article-feature-block.css
+++ b/css/block/ucb-article-feature-block.css
@@ -92,6 +92,11 @@
   max-width: 100%;
 }
 
+.feature-img-wide{
+  aspect-ratio: 16 / 9;
+  object-fit: cover;
+}
+
 .ucb-stacked-secondary-container > .ucb-article-card {
   margin-bottom: 0px;
   border-bottom: none;
