Newsletter: adds additional image css to force iOS to do what we want

--- a/templates/content/node--newsletter--email-html.html.twig
+++ b/templates/content/node--newsletter--email-html.html.twig
@@ -130,6 +130,9 @@
             <meta name="supported-color-schemes" content="light">
             <meta name="color-scheme" content="only">
             <meta name="supported-color-scheme" content="only">
+            {# This should override image issues on IOS #}
+            <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+            <meta name="x-apple-disable-message-reformatting">
             {# This should override Outlook on Mac #}
             <style type="text/css">
               .body, .darkmode, .darkmode div { /* With class body on the body tag, and all elements represented here that have a background color */
