--- a/templates/paragraphs/paragraph--newsletter-section--email-html.html.twig
+++ b/templates/paragraphs/paragraph--newsletter-section--email-html.html.twig
@@ -45,7 +45,7 @@
                     src="{{base_url}}{{file_url(item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail.entity.field_media_image.entity.fileuri|image_style('focal_image_wide'))}}"
                     width="600"
                     height="300"
-                    style="display: block; width: 600px; height: 300px; object-fit: cover; border: 0; outline: none;"
+                    style="display: block !important; width: 600px !important; height: 300px !important; object-fit: cover !important; border: 0 !important; outline: none !important;"
                     alt="{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail.entity.field_media_image.alt|render }}" />
                   </a>
 								</td>
@@ -57,7 +57,7 @@
                     src="{{base_url}}{{file_url(item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_media_selection.entity.field_media.entity.field_media_image.entity.fileuri|image_style('focal_image_wide'))}}"
                     width="600"
                     height="300"
-                    style="display: block; width: 600px; height: 300px; object-fit: cover; border: 0; outline: none;"
+                    style="display: block !important; width: 600px !important; height: 300px !important; object-fit: cover !important; border: 0 !important; outline: none !important;"
                     alt="{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_media_selection.entity.field_media.entity.field_media_image.alt|render }}" />
                   </a>
 								</td>
@@ -68,7 +68,7 @@
                   src="{{base_url}}{{file_url(item.entity.field_newsletter_content_image.entity.field_media_image.entity.fileuri|image_style('focal_image_wide'))}}"
                   width="600"
                   height="300"
-                  style="display: block; width: 600px; height: 300px; object-fit: cover; border: 0; outline: none;"
+                  style="display: block !important; width: 600px !important; height: 300px !important; object-fit: cover !important; border: 0 !important; outline: none !important;"
                   alt="{{ item.entity.field_newsletter_content_image.entity.field_media_image.alt|render }}" />
                 </td>
 								{% endif %}
@@ -175,7 +175,7 @@
                       src="{{base_url}}{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail.entity.field_media_image.entity.fileuri|image_style('focal_image_square') }}"
                       width="130"
                       height="130"
-                      style="display: block; width: 130px; height: 130px; object-fit: cover; border: 0; outline: none;"
+                      style="display: block !important; width: 130px !important; height: 130px !important; object-fit: cover !important; border: 0 !important; outline: none !important;"
                       alt="{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail.entity.field_media_image.alt|render }}" />
 												{# Code to render selected article content (!thumbnail) #}
 											{% elseif item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_media_selection.entity.field_media.entity.field_media_image %}
@@ -183,7 +183,7 @@
                       src="{{base_url}}{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_media_selection.entity.field_media.entity.field_media_image.entity.fileuri|image_style('focal_image_square') }}"
                       width="130"
                       height="130"
-                      style="display: block; width: 130px; height: 130px; object-fit: cover; border: 0; outline: none;"
+                      style="display: block !important; width: 130px !important; height: 130px !important; object-fit: cover !important; border: 0 !important; outline: none !important;"
                       alt="{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_media_selection.entity.field_media.entity.field_media_image.alt|render }}" />
 												{# Code to render user made content #}
 											{% elseif item.entity.field_newsletter_content_image.entity.field_media_image %}
@@ -191,7 +191,7 @@
                       src="{{base_url}}{{ item.entity.field_newsletter_content_image.entity.field_media_image.entity.fileuri|image_style('focal_image_square') }}"
                       width="130"
                       height="130"
-                      style="display: block; width: 130px; height: 130px; object-fit: cover; border: 0; outline: none;"
+                      style="display: block !important; width: 130px !important; height: 130px !important; object-fit: cover !important; border: 0 !important; outline: none !important;"
                       alt="{{ item.entity.field_newsletter_content_image.entity.field_media_image.alt|render }}" />
 											{% endif %}
 									</td>
