--- a/templates/block/block--content-row.html.twig
+++ b/templates/block/block--content-row.html.twig
@@ -197,7 +197,7 @@
               <img alt="{{ item.entity.field_row_layout_content_image.entity.field_media_image.alt }}" class="ucb-content-row-img-lg" src="{{ item.entity.field_row_layout_content_image.entity.field_media_image.entity.fileuri|image_style('focal_image_teaser_wide') }}"></img>
             </a>
           {% else %}
-            {{ image|view }}
+            <img alt="{{ item.entity.field_row_layout_content_image.entity.field_media_image.alt }}" class="ucb-content-row-img-lg" src="{{ item.entity.field_row_layout_content_image.entity.field_media_image.entity.fileuri|image_style('focal_image_teaser_wide') }}"></img>
           {% endif %}
         </div>
         {% endif %}
