Newsletter: new method for linking back to site in footer

--- a/templates/content/node--newsletter--email-html.html.twig
+++ b/templates/content/node--newsletter--email-html.html.twig
@@ -745,7 +745,7 @@
          <!--Site Link-->
                   <tr style="{{boxBackground}}">
                     <td style="text-align: center; text-align: center; padding-top:10px;">
-                      <a style="font-family: Helvetica, Arial, sans-serif;line-height: 19px; margin: 0; font-size: 18px; font-weight:bold;text-align: center;text-decoration:none;{{aStyles}}" href="{{base_domain}}">{{ site_name }}
+                      <a style="font-family: Helvetica, Arial, sans-serif;line-height: 19px; margin: 0; font-size: 18px; font-weight:bold;text-align: center;text-decoration:none;{{aStyles}}" href="{{ url('<front>', {}, {'absolute': true}) }}">{{ site_name }}
                       </a>
                     </td>
                   </tr>
