New Article Paragraph
Added new paragraph template for secondary article content.

Updated css on articles so that content isn't justified and aligned for everything, just blockquotes

--- a/css/ucb-article.css
+++ b/css/ucb-article.css
@@ -108,9 +108,12 @@ i.fa-regular.fa-calendar {
 }
 
 .ucb-article-content-media {
+  margin-bottom: 20px;
+}
+
+.ucb-article-content-media:has(.ucb-article-blockquote) {
   align-self: center;
   text-align: center;
-  margin-bottom: 20px;
 }
 
 .ucb-article-content-media.ucb-article-content-media-above,
