--- a/css/ucb-article.css
+++ b/css/ucb-article.css
@@ -116,8 +116,8 @@ i.fa-regular.fa-calendar {
   text-align: center;
 }
 
-.ucb-article-content-media.ucb-article-content-media-above,
-.ucb-article-content-media.ucb-article-content-media-below {
+.ucb-article-content-media.ucb-article-content-media-above:has(.paragraph--type--media),
+.ucb-article-content-media.ucb-article-content-media-below:has(.paragraph--type--media) {
   text-align: center;
 }
 
