wip: adds fields

--- a/templates/views/views-view-fields--ucb-trusted-discovery--page-1.html.twig
+++ b/templates/views/views-view-fields--ucb-trusted-discovery--page-1.html.twig
@@ -28,6 +28,7 @@
       <span class="ucb-card-readmore">
         <a href="{{ fields.source_url.content }}" aria-hidden="true">Read more</a>
       </span>
+      <share-button>Share on your site</share-button>
     </div>
 
   </div>
