wip: share button assembles endpoint to fetch original node

--- a/templates/views/views-view--ucb-trusted-discovery--page-1.html.twig
+++ b/templates/views/views-view--ucb-trusted-discovery--page-1.html.twig
@@ -1,3 +1,5 @@
+{{ attach_library('boulder_base/trusted-share-button') }}
+
 <div class="trusted-content-wrapper">
 
   {# Exposed filters (form) #}
