Fix images on View

--- a/templates/views/views-view-fields--ucb-trusted-discovery--page-1.html.twig
+++ b/templates/views/views-view-fields--ucb-trusted-discovery--page-1.html.twig
@@ -10,7 +10,7 @@
         <div class="col-md-2 ucb-card-image">
           <a href="{{ full_url }}" role="presentation" aria-hidden="true">
             <img
-              src="{{ fields.focal_image_square.content|render|striptags }}"
+              src="{{ fields.focal_image_square.content }}"
               alt="{{ fields.title.content|striptags }}"
             >
           </a>
