Rename block on view

--- a/templates/views/views-view--ucb-trusted-discovery--page-1.html.twig
+++ b/templates/views/views-view--ucb-trusted-discovery--page-1.html.twig
@@ -3,7 +3,7 @@
 <div class="trusted-content-wrapper">
   <div class="container">
     <h1>Discover Content</h1>
-    <p>Discover content to share on your Web Express site. Filter to find quality content you like, copy the link and place into a Trusted Content block to share!</p>
+    <p>Discover content to share on your Web Express site. Filter to find quality content you like, copy the link and place into a Syndicated CU Content block to share!</p>
   </div>
 
   {# Exposed filters (form) #}
