Adds alt text to view

--- a/templates/views/views-view-fields--ucb-trusted-discovery--page-1.html.twig
+++ b/templates/views/views-view-fields--ucb-trusted-discovery--page-1.html.twig
@@ -11,7 +11,7 @@
           <a href="{{ full_url }}" role="presentation" aria-hidden="true">
             <img
               src="{{ fields.focal_image_square.content }}"
-              alt="{{ fields.title.content|striptags }}"
+              alt="{{ fields.focal_image_alt.content }}"
             >
           </a>
         </div>
