--- a/templates/views/views-view-fields--ucb-trusted-discovery--page-1.html.twig
+++ b/templates/views/views-view-fields--ucb-trusted-discovery--page-1.html.twig
@@ -26,7 +26,7 @@
           <span class="ucb-card-date">{{ fields.changed.content|striptags }}</span>
         {% endif %}
 
-        <p class="ucb-card-summary">{{ fields.summary.content|striptags }}</p>
+        <p class="ucb-card-summary">{{ fields.summary.content }}</p>
         <span class="ucb-card-readmore">
           <a href="{{ full_url }}" aria-hidden="true">Read more</a>
         </span>
