--- a/templates/field/field--field-ucb-article-tags.html.twig
+++ b/templates/field/field--field-ucb-article-tags.html.twig
@@ -5,13 +5,14 @@
 #}
 {# Only shows Taxonomy terms with display = true #}
 {% set items = items|filter(item => item.content['#options'].entity.field_ucb_tag_display.value == '1') %}
+{% set sorted_items = items|sort %}
 {% if items %}
   <div role="contentinfo" class="container ucb-article-tags" itemprop="keywords">
     <span class="visually-hidden">Tags:</span>
     <div class="ucb-article-tag-icon" aria-hidden="true">
       <i class="fa-solid fa-tags"></i>
     </div>
-    {% for item in items|sort %}
+    {% for item in sorted_items %}
       {{ item.content }}
     {% endfor %}
   </div>
